# ChangeLog for net-print/cups
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.379 2010/02/10 19:46:08 ssuominen Exp $

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r1.ebuild,
  cups-1.3.11-r2.ebuild, cups-1.4.2-r1.ebuild:
  Fix poppler depend.

  24 Jan 2010; Jonathan Callen <abcd@gentoo.org> cups-1.4.2-r1.ebuild:
  Depend on virtual/poppler-utils, not app-text/poppler-utils

  22 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> cups-1.4.2-r1.ebuild:
  Require SLOT="0" of media-libs/jpeg for headers.

  26 Dec 2009; Peter Volkov <pva@gentoo.org> cups-1.3.11-r1.ebuild,
  cups-1.3.11-r2.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

*cups-1.4.2-r1 (30 Nov 2009)
*cups-1.3.11-r2 (30 Nov 2009)

  30 Nov 2009; Timo Gurr <tgurr@gentoo.org> -cups-1.3.10-r2.ebuild,
  +cups-1.3.11-r2.ebuild, +files/cups-1.3.11-str3200.patch,
  -cups-1.4.2.ebuild, +cups-1.4.2-r1.ebuild,
  +files/cups-1.4.2-str3200.patch:
  Revbumps fixing security issue CVE-2009-3553. Fix linguas handling bug
  #293217 thanks to Rafał Mużyło, remove zeroconf of cups 1.4 since it's
  missing an avahi implementation, bug #293295. Remove old.

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> cups-1.3.11-r1.ebuild:
  Stable for HPPA (bug #293865).

  23 Nov 2009; Brent Baude <ranger@gentoo.org> cups-1.3.11-r1.ebuild:
  Marking cups-1.3.11-r1 ppc64 for bug 293865

  23 Nov 2009; Raúl Porcel <armin76@gentoo.org> cups-1.3.11-r1.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #293865

  23 Nov 2009; Markus Meier <maekke@gentoo.org> cups-1.3.11-r1.ebuild:
  amd64/arm/x86 stable, bug #293865

  22 Nov 2009; Tobias Klausmann <klausman@gentoo.org> cups-1.3.11-r1.ebuild:
  Stable on alpha, bug #293865

  21 Nov 2009; nixnut <nixnut@gentoo.org> cups-1.3.11-r1.ebuild:
  ppc stable #293865
