@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.379 2010/02/10 19:46:08 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.380 2010/03/08 22:20:59 reavertm Exp $
+
+  08 Mar 2010; Maciej Mrozowski <reavertm@gentoo.org> cups-1.3.11-r1.ebuild,
+  cups-1.3.11-r2.ebuild, cups-1.4.2-r1.ebuild:
+  Fixed cyclic dependency with app-text/poppler[utils]
 
   10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> cups-1.3.11-r1.ebuild,
   cups-1.3.11-r2.ebuild, cups-1.4.2-r1.ebuild:
